# LOTUS-union

./: .gitignore  INSTALL.txt  README.md  README.txt  baseline_union_test.py  exact_match_evaluation.py  labeled_data_cite.csv  lotus_test.py  processed_result_1300.csv  processed_result_3290.csv  sem_intersect_test.py  sem_intersect_test_dblp_acm.py  sem_union_final_test_a_g.py  sem_union_final_test_dblp_acm.py  sem_union_final_test_ebook.py  union_2.0_test.py  union_test_data.py
Amazon-GoogleProducts/: Untitled.ipynb  processed_dblp_acm_ground_truth.csv
index_dir/: index  vecs
lotus/: __init__.py
lotus/models/: lm.py
lotus/sem_ops/: __init__.py  sem_intersect.py  sem_union.py  sem_union_large.py
lotus/sem_ops/sem_union_folder/: CMakeLists.txt  write_nimble.cpp
lotus/templates/: task_instructions.py
tests/: dataset_preprocess.py  knn2.csv  knn3_cite_L6_l2_0.4.csv  knn3_e5_l2_0.4.csv  knn3_l2_0.4.csv  labeled_data-2.csv  processed_result_400.csv  sem_union_final_test_a_g.py  tfidf_to_nimble.cpp  union_test_data.py
union_test_results/: baseline-deekseek40.csv  test1-deekseek40.csv  test1-llama.csv  test1.csv
